...
                model.renameDomain(domain, to: title)
            }
            .padding(.top)
            .padding(.horizontal)
            
            Picker("Show Up Next or Backlog", selection: $showBacklog) {
                Text("Up Next")
                    .accessibility(identifier: "Queue Segment")
                    .tag(false)
                Text("Backlog")
                    .accessibility(identifier: "Backlog Segment")
                    .tag(true)
            }
            .pickerStyle(SegmentedPickerStyle())
            .labelsHidden()
            .padding(.horizontal)
...
